<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">EarBug</string>
    <string name="hint_txt">Hit the play button to start the game! </string>
    <string name="hint_txt1">Stop the music when you recognize the song. Quicker you recognize the music higher the score. </string>
    <string name="question">What is name of the band?</string>
    <string name="play_game"> Play</string>
    <string name="end_game"> Done?</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="score_txt">Score:</string>
    <string name="offset">offset</string>
    <string name="timer_txt">Timer:</string>
    <string name="getready_txt">Get Ready!</string>
    <string name="no_items">No entries to display.</string>
    
</resources>
